# ResuFlow

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  start_server.sh
api/v1/: router.py
api/v1/endpoints/: auth.py  resumes.py  users.py
backend/: Dockerfile  main.py  pyproject.toml  start_worker.sh
backend/api/v1/: router.py
backend/core/: settings.py
backend/db/: database.py
backend/model/: resume_result.py  task.py
backend/schema/: task.py  user.py
backend/services/: embedding_service.py  llm_parser.py  resume_analyzer.py  resume_service.py
core/: security.py  settings.py
db/: database.py
docs/: README.md  api.md  architecture.md  data-models.md  operations.md  project-structure.md
frontend/: Dockerfile  index.html  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ExportPDF.tsx  LoadingSkeleton.tsx  PipelineVisualization.tsx  ProtectedRoute.tsx  Toast.tsx  UploadModal.tsx
frontend/src/contexts/: AuthContext.tsx  ResumeContext.tsx  ToastContext.tsx
frontend/src/data/: dummy.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  Signup.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
model/: __init__.py  resume_result.py  user.py
mq/: __init__.py  config.py  consumer.py  producer.py  topics.py  worker.py
schema/: resume_result.py
services/: auth_service.py  embedding_service.py  llm_parser.py  resume_analyzer.py  resume_parser.py  resume_service.py  user_service.py
