[project]
name = "resuflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiokafka>=0.11.0",
    "bcrypt==4.3.0",
    "fastapi[all]>=0.136.1",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langchain-huggingface>=0.1.0",
    "langchain-postgres>=0.0.14",
    "lz4>=4.4.5",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.3.3",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.49",
]
